[package]
name = "sarina-web-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/bin/server/mod.rs"


[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"]}
tonic = "0.8"
prost = "0.11"

tokio = { version = "1.0", features = ["full", "macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.8"
